examples/test/testpolicy2113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2113
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key45: value40
      key49: value41
      key13: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value3
      podSelector:
        matchLabels:
          key23: value45
          key44: value35
